<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calculator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Widget.Design.BottomSheet.Modal"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/calculation"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginTop="8dp"
            android:textAlignment="textEnd"
            android:textColor="#673AB7"
            android:textSize="56sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:textColor="#673AB7"
            android:textSize="56sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculation"
            android:autofillHints="@android:string/ok"
            tools:ignore="LabelFor" />


        <Button
            android:id="@+id/btn1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onNumberClick"
            android:text="@string/_1"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintRight_toLeftOf="@id/btn2"
            app:layout_constraintTop_toTopOf="@+id/btn2" />

        <Button
            android:id="@+id/btn2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onNumberClick"
            android:text="@string/_2"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/btn5"
            app:layout_constraintTop_toBottomOf="@+id/btn5" />

        <Button
            android:id="@+id/btn3"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onNumberClick"
            android:text="@string/_3"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/btn2"
            app:layout_constraintTop_toTopOf="@+id/btn2" />

        <Button
            android:id="@+id/btn4"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onNumberClick"
            android:text="@string/_4"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btnMult"
            app:layout_constraintRight_toLeftOf="@id/btn5"
            app:layout_constraintTop_toTopOf="@+id/btn5" />

        <Button
            android:id="@+id/btn5"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:onClick="onNumberClick"
            android:text="@string/_5"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/result" />

        <Button
            android:id="@+id/btn6"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="75dp"
            android:onClick="onNumberClick"
            android:text="@string/_6"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btnBackspace"
            app:layout_constraintLeft_toRightOf="@id/btn5"
            app:layout_constraintStart_toEndOf="@id/btn5"
            app:layout_constraintTop_toBottomOf="@id/btn9" />

        <Button
            android:id="@+id/btn7"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onNumberClick"
            android:text="@string/_7"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintRight_toLeftOf="@id/btn8"
            app:layout_constraintTop_toTopOf="@+id/btn9" />

        <Button
            android:id="@+id/btn8"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onNumberClick"
            android:text="@string/_8"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn5"
            app:layout_constraintStart_toStartOf="@id/btn5" />

        <Button
            android:id="@+id/btnDiv"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOperationClick"
            android:text="@string/div"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btn9"
            app:layout_constraintLeft_toRightOf="@id/btn9"
            app:layout_constraintTop_toTopOf="@+id/btn8" />

        <Button
            android:id="@+id/btnMult"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOperationClick"
            android:text="@string/mult"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btnDiv"
            app:layout_constraintLeft_toRightOf="@id/btn6"
            app:layout_constraintTop_toTopOf="@+id/btn5" />

        <Button
            android:id="@+id/btn9"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onNumberClick"
            android:text="@string/_9"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/btn8"

            app:layout_constraintTop_toTopOf="@+id/btn8" />

        <Button
            android:id="@+id/btn0"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onNumberClick"
            android:text="@string/_0"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/btn2"
            app:layout_constraintTop_toBottomOf="@+id/btn2" />

        <Button
            android:id="@+id/btnComma"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onNumberClick"
            android:text="@string/comma"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintRight_toLeftOf="@id/btn0"
            app:layout_constraintTop_toTopOf="@+id/btn0" />

        <Button
            android:id="@+id/btnSumm"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOperationClick"
            android:text="@string/summ"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btnSub"
            app:layout_constraintLeft_toRightOf="@id/btnEqual"
            app:layout_constraintTop_toTopOf="@+id/btnEqual" />

        <Button
            android:id="@+id/btnEqual"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOperationClick"
            android:text="@string/equal"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btn3"
            app:layout_constraintLeft_toRightOf="@id/btn0"
            app:layout_constraintTop_toTopOf="@+id/btn0" />

        <Button
            android:id="@+id/btnSub"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOperationClick"
            android:text="@string/sub"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btnMult"
            app:layout_constraintLeft_toRightOf="@id/btn3"
            app:layout_constraintTop_toTopOf="@+id/btn3" />

        <Button
            android:id="@+id/btnClear"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOperationClick"
            android:text="@string/clear"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/btnBackspace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result" />

        <Button
            android:id="@+id/btnBackspace"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOperationClick"
            android:text="@string/backspace"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnClear"
            app:layout_constraintTop_toBottomOf="@+id/result" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>